Click on selected token to edit functional

--- a/src/lib/react-structured-filter/scss/style.scss
+++ b/src/lib/react-structured-filter/scss/style.scss
@@ -170,6 +170,12 @@
 		margin: 5px;
 		padding: 5px;
 		font-weight: bold;
+		.token{
+			span{
+				margin: 0 3px;
+				padding: 0 1px;
+			}
+		}
 	}
 	ul.typeahead-selector {
 		z-index: 100;
